--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 
     <properties>
         <kotlin.version>1.3.72</kotlin.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
 
